--- a/style.css
+++ b/style.css
@@ -6,16 +6,44 @@ body {
 
 main {
     
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
 }
 
 .row {
     padding: 5px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+/* Navigation bar logo*/
+.img-responsive{
+    max-height: 90px;
+    max-width: 120px;
+    display:block;
+    margin-left: 20px;
+
+}
+
+/* Navigation links */
+.nav-item {
+    font-size: larger;
+}
+
+/* Styling size, color, and palcement of the toggler*/
+.navbar-toggler {
+    border-color:thistle;
 }
 
 
+/* Header */
+header {
+    font-size:35px;
+    color: #fa86c4;
+    padding-top: 20px;
+    padding-bottom: 30px;
 
+}
 
 /* Hyperlinks */
 .links {
@@ -35,41 +63,13 @@ main {
     color: #fa86c4;
 }
 
-/* Navigation bar logo*/
-.img-responsive{
-    max-height: 90px;
-    max-width: 120px;
-    display:block;
-    margin: 0 auto;
-}
-
-
-/* Navigation links */
-.nav-item {
-    font-size: larger;
-}
-
-/* Styling size, color, and palcement of the toggler*/
-.navbar-toggler {
-    border-color:thistle;
-}
-
-
-/* Header */
-header {
-    font-size:35px;
-    color: #fa86c4;
-    padding-top: 20px;
-    padding-bottom: 30px;
-    margin-left: 10px;
-
-}
-
 /* Styling the size of the article container */
 .container-xs {
-    max-width: 1000px;
+    max-width: 50%;
+
     margin: auto;
 }
+
 
 /* Index page image */
 .img-thumbnail {
@@ -135,4 +135,5 @@ footer {
    text-align: center;
 }
 
-    
+
+
