--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Page styling */
 body {
     background-color: #f2dcf2;
@@ -11,10 +10,11 @@ main {
 }
 
 .row {
-    padding: 5px;
     margin-left: 50px;
     margin-right: 50px;
+    padding: 5px;
 }
+
 
 /* Navigation bar logo*/
 .img-responsive{
@@ -41,8 +41,7 @@ header {
     font-size:35px;
     color: #fa86c4;
     padding-top: 20px;
-    padding-bottom: 30px;
-
+    text-align: center;
 }
 
 /* Hyperlinks */
@@ -65,8 +64,7 @@ header {
 
 /* Styling the size of the article container */
 .container-xs {
-    max-width: 50%;
-
+    max-width: 500px;
     margin: auto;
 }
 
@@ -133,6 +131,35 @@ footer {
    background-color:#f2dcf2;
    color: white;
    text-align: center;
+}
+/* xl screensizes >1200px */
+@media screen and (min-width: 1200px) {
+    .container-xs {
+        max-width: 1100px;
+        margin: auto;
+    }
+    .img-thumbnail {
+        width: 300px;
+    }
+}
+/* md screensizes >768px */
+@media screen and (min-width: 768px) {
+    .container-xs {
+        max-width: 750px;
+    }
+    .img-thumbnail {
+        width: 250px;
+    }
+}
+
+/* smallest/iPhone screensize */
+@media screen and (max-width: 480px) {
+    .container-xs {
+        max-width: 300px;
+    }
+    .img-thumbnail {
+        max-width: 100%;
+    }
 }
 
 
